<resources>
    <string name="app_name">MEFS App</string>
    <string-array name="countries">
        <item>China</item>
        <item>India</item>
        <item>USA</item>
    </string-array>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_agriculture">Agriculture</string>
    <string name="title_macroeconomic">Macroeconomics</string>
    <string name="title_home">Macroeconomics</string>
    <string name="agriculture">Agriculture</string>
    <string name="trade">Trade</string>
    <string name="title_notifications">Trade</string>
    <string name="macroeconomic_researcher_btn">Macroeconomic Researcher</string>
    <string name="government_official_btn">Government Official</string>
    <string name="gdp_growth_rage">GDP (Growth Rage)</string>
    <string name="gdp_current_usd">GDP (USA)</string>
    <string name="current_account_balance">Current Account Balance</string>
    <string name="fdi_net">FDI Net</string>
    <string name="fdi_net_in">FDI Inflows (USD)</string>
    <string name="fdi_net_out">FDI Outflows (USD)</string>
    <string name="show_button">Show</string>
    <string name="agricultural_contribution">Agricultural Contribution</string>
    <string name="manufacturing">Manufacturing</string>
    <string name="annual_percent_growth">Annual Percent Growth</string>
    <string name="fertilizer_kgs_per_hectare">Fertilizer (Kgs per hectare)</string>
    <string name="fertilizer_percent_production">Fertilizer (% of Production)</string>
    <string name="res_mon_check">Reserves(in months)</string>
    <string name="res_curr_trade">Reserves (Current US$)</string>
    <string name="tot_res_trade">Total Reserves</string>
    <string name="gni_curr">GNI (Current US$)</string>
    <string name="debt_trade">Debt</string>
    <string name="tot_debt_trade">Total Debt</string>
    <string name="trade_textview">Trade</string>
</resources>