<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trade.TradeFragment">


    <CheckBox
        android:id="@+id/checkbox_tot_res"
        android:layout_width="147dp"
        android:layout_height="49dp"
        android:layout_marginTop="18dp"
        android:text="@string/tot_res_trade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_res_curr" />

    <CheckBox
        android:id="@+id/checkbox_debt"
        android:layout_width="147dp"
        android:layout_height="49dp"
        android:layout_marginTop="9dp"
        android:text="@string/debt_trade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_gni_current" />

    <CheckBox
        android:id="@+id/checkbox_totalDebt"
        android:layout_width="147dp"
        android:layout_height="49dp"
        android:layout_marginTop="22dp"
        android:text="@string/tot_debt_trade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_debt" />

    <CheckBox
        android:id="@+id/checkbox_res_mon"
        android:layout_width="148dp"
        android:layout_height="0dp"
        android:layout_marginTop="43dp"
        android:text="@string/res_mon_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/checkbox_res_curr"
        android:layout_width="144dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/res_curr_trade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_res_mon"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkbox_gni_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/gni_curr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_tot_res" />

    <Button
        android:id="@+id/show_button_trade"
        android:layout_width="99dp"
        android:layout_height="47dp"
        android:layout_marginTop="37dp"
        android:onClick="Check"
        android:text="@string/show_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_totalDebt"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="89dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="77dp"
        android:text="@string/trade_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>