<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.macroeconomic.MacroeconomicFragment">

    <CheckBox
        android:id="@+id/checkbox_gdp_growth_rage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gdp_growth_rage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_gdp_current_usd" />

    <CheckBox
        android:id="@+id/checkbox_gdp_current_usd"
        android:layout_width="158dp"
        android:layout_height="47dp"
        android:layout_marginTop="81dp"
        android:text="@string/gdp_current_usd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkbox_current_account_balance"
        android:layout_width="162dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/current_account_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_fdi_net"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkbox_fdi_net"
        android:layout_width="165dp"
        android:layout_height="51dp"
        android:layout_marginTop="9dp"
        android:text="@string/fdi_net"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_gdp_growth_rage" />

    <CheckBox
        android:id="@+id/checkbox_fdi_net_in"
        android:layout_width="167dp"
        android:layout_height="53dp"
        android:layout_marginTop="11dp"
        android:text="@string/fdi_net_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_current_account_balance" />

    <CheckBox
        android:id="@+id/checkbox_fdi_net_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/fdi_net_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_fdi_net_in" />

    <Button
        android:id="@+id/show_button"
        android:layout_width="99dp"
        android:layout_height="47dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="156dp"
        android:onClick="Check"
        android:text="@string/show_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_fdi_net_out"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>